--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11",
-    "vue-material": "^1.0.0-beta-11"
+    "vue": "latest",
+    "vue-material": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
